k8s-manifests/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api
  namespace: task-platform

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
      - name: api
        image: task-api:v1
        imagePullPolicy: IfNotPresent

        ports:
        - containerPort: 5000

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
