k8s-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: frontend-deployment
  namespace: task-platform

spec:
  replicas: 2
  
  selector:
    matchLabels:
      app: frontend
  
  template:
    metadata:
      labels:
        app: frontend

  
    spec:
      containers:
      - name: frontend
        image: task-frontend:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
