k8s-manifests/mongodb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet

metadata:
  name: mongodb
  namespace: task-platform

spec:
  serviceName: mongodb-service

  replicas: 1

  selector:
    matchLabels:
      app: mongodb

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb
        image: mongo:6

        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongo-storage
          mountPath: /data/db

      volumes:
      - name: mongo-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
