k8s-manifests/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service
  namespace: task-platform

spec:
  selector:
    app: api

  ports:
    - port: 80
      targetPort: 5000

  type: ClusterIP
