k8s-manifests/frontend-service.yaml
apiVersion: v1 
kind: Service

metadata:
  name: frontend-service
  namespace: task-platform

spec:

  selector:
    app: frontend

  ports:
  - port: 80 
    targetPort: 80 

  type: ClusterIP
