k8s-manifests/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: task-platform

spec:
  selector:
    app: mongodb

  ports:
    - port: 27017
      targetPort: 27017  

  clusterIP: None
